--- a/main.css
+++ b/main.css
@@ -1,11 +1,8 @@
 
 
-
 /**********************************************
-
+ALL
 ***********************************************/
-
-
 header {
 	background-color: pink;
 	margin: 0 0 0 0;
@@ -13,12 +10,17 @@ header {
 	width: 100%;
 	height: 200px
 	float: left;
-	
-	
-
-	
 
 }
+
+
+
+
+
+/**********************************************
+PORTFOLIO PAGE
+***********************************************/
+
 
 h1 {
 	font-size: 2.4em;
@@ -38,26 +40,26 @@ h2 {
 }
 
 nav ul {
-	
+
 	text-align: center;
 	position: relative; left: -10px;
-	
-	
-	
+
+
+
 }
 
 nav ul li {
-	
+
 	font-family: arial;
 	text-decoration: none;
 	list-style: none;
 	color: #b9b9b9;
 	display: inline;
-	padding: 10px 15px; 
+	padding: 10px 15px;
 	color: pink;
-	
-	
-	
+
+
+
 }
 
 nav ul .selected {
@@ -67,14 +69,14 @@ nav ul .selected {
 
 nav ul li:visited{
 	color: #fff;
-	
+
 }
 
 
 	nav ul li:hover {
 	border-bottom:  solid pink;
 }
-	
+
 
 
 
@@ -85,8 +87,8 @@ a {
 }
 
 footer {
-	
-	font-family: none; 
+
+	font-family: none;
 	color: grey;
 	clear: both;
 	background: black;
@@ -97,7 +99,7 @@ footer {
 }
 
 #gallery {
-	
+
 	list-style: none;
 }
 
@@ -105,20 +107,20 @@ footer {
 	float: left;
 	width: 45%;
 	margin: 5px;
-	
+
 }
 
 #gallery li a p{
-	
+
 	font-family: 'Hind Vadodara', sans-serif;
 	font-size: 0.8em;
 	margin: 0px;
 	color: #b9b9b9;
-	
+
 }
 
 #wrapper {
-	
+
 	max-width: 940px;
 	margin: 0 auto;
 	padding: 0 5%;
@@ -129,17 +131,17 @@ img{
 }
 
 html {
-	
-background: white;	
+
+background: white;
 }
 
 /**********************************************
-CONTACTS
+CONTACTS PAGE
 ***********************************************/
 
 
 .contact-para {
-	
+
 	font-family: 'Hind Vadodara', sans-serif;
 	color: #b9b9b9;
 }
@@ -156,18 +158,18 @@ CONTACTS
 	display: block;
 	margin:0 0 200px;
 }
-	
+
 .contact-contacts  {
     list-style: none;
-	
+
 }
 
 
 .contact-contacts li a {
 	color: #b9b9b9;
 }
-    
 
 
-
-
+/**********************************************
+ABOUT PAGE
+***********************************************/
